# UR5

./: README.md
Backup/: caliberation_data.txt  camera.ini  camera.yaml
Docs/: Add Camera.md  Add gripper and table.md  Add gripper.md  Getting started.md  Pick_and_place.md
description/: arm.xacro  workcell.xacro
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/src/: pick_place_tf.cpp  pick_place_tutorial.cpp  tf_broadcaster.cpp
ur5_gripper_moveit_config/: .setup_assistant  package.xml
ur5_gripper_moveit_config/config/: arm.srdf  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
ur5_gripper_moveit_config/launch/: chomp_planning_pipeline.launch.xml  gazebo.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml
ur5_gripper_mt_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_gripper_mt_config/config/: arm.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ur5_gripper_mt_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur_robotiq_moveit_config/: .setup_assistant  package.xml
ur_robotiq_moveit_config/config/: joint_limits.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur_robot_with_gripper.srdf
ur_robotiq_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  ur_robotiq_moveit_planning_execution.launch
ur_workcell_moveit_config/: .setup_assistant  package.xml
ur_workcell_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  workcell.srdf
ur_workcell_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  ur_workcell_moveit_planning_execution.launch
